// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditsSettings component renders only the menu if page unknown 1`] = `
<div
  className="settings"
>
  <div
    className="settings-menu"
  >
    <ul>
      <li
        className="General"
        key="General"
        onClick={[Function]}
      >
        General
      </li>
      <li
        className="Electron"
        key="Electron"
        onClick={[Function]}
      >
        Electron
      </li>
      <li
        className="Credits"
        key="Credits"
        onClick={[Function]}
      >
        Credits
      </li>
    </ul>
  </div>
  <div
    className="settings-content"
  >
    <div
      className="settings-close"
    >
      <Blueprint3.Icon
        icon="cross"
      />
    </div>
  </div>
</div>
`;

exports[`CreditsSettings component renders the Credits page after a click 1`] = `
<div
  className="settings"
>
  <div
    className="settings-menu"
  >
    <ul>
      <li
        className="General"
        key="General"
        onClick={[Function]}
      >
        General
      </li>
      <li
        className="Electron"
        key="Electron"
        onClick={[Function]}
      >
        Electron
      </li>
      <li
        className="selected Credits"
        key="Credits"
        onClick={[Function]}
      >
        Credits
      </li>
    </ul>
  </div>
  <div
    className="settings-content"
  >
    <div
      className="settings-close"
    >
      <Blueprint3.Icon
        icon="cross"
      />
    </div>
    <settings-credits
      appState={
        Object {
          "isSettingsShowing": true,
        }
      }
    />
  </div>
</div>
`;

exports[`CreditsSettings component renders the Electron page after a click 1`] = `
<div
  className="settings"
>
  <div
    className="settings-menu"
  >
    <ul>
      <li
        className="General"
        key="General"
        onClick={[Function]}
      >
        General
      </li>
      <li
        className="selected Electron"
        key="Electron"
        onClick={[Function]}
      >
        Electron
      </li>
      <li
        className="Credits"
        key="Credits"
        onClick={[Function]}
      >
        Credits
      </li>
    </ul>
  </div>
  <div
    className="settings-content"
  >
    <div
      className="settings-close"
    >
      <Blueprint3.Icon
        icon="cross"
      />
    </div>
    <settings-electron
      appState={
        Object {
          "isSettingsShowing": true,
        }
      }
    />
  </div>
</div>
`;

exports[`CreditsSettings component renders the Electron page by default 1`] = `
<div
  className="settings"
>
  <div
    className="settings-menu"
  >
    <ul>
      <li
        className="selected General"
        key="General"
        onClick={[Function]}
      >
        General
      </li>
      <li
        className="Electron"
        key="Electron"
        onClick={[Function]}
      >
        Electron
      </li>
      <li
        className="Credits"
        key="Credits"
        onClick={[Function]}
      >
        Credits
      </li>
    </ul>
  </div>
  <div
    className="settings-content"
  >
    <div
      className="settings-close"
    >
      <Blueprint3.Icon
        icon="cross"
      />
    </div>
    <settings-general
      appState={
        Object {
          "isSettingsShowing": true,
        }
      }
    />
  </div>
</div>
`;

exports[`CreditsSettings component renders the General page after a click 1`] = `
<div
  className="settings"
>
  <div
    className="settings-menu"
  >
    <ul>
      <li
        className="selected General"
        key="General"
        onClick={[Function]}
      >
        General
      </li>
      <li
        className="Electron"
        key="Electron"
        onClick={[Function]}
      >
        Electron
      </li>
      <li
        className="Credits"
        key="Credits"
        onClick={[Function]}
      >
        Credits
      </li>
    </ul>
  </div>
  <div
    className="settings-content"
  >
    <div
      className="settings-close"
    >
      <Blueprint3.Icon
        icon="cross"
      />
    </div>
    <settings-general
      appState={
        Object {
          "isSettingsShowing": true,
        }
      }
    />
  </div>
</div>
`;
